# CPFA-ARGoS

./: .gitignore  run_experiments.sh
experiments/: BCPFAExample.argos  BCPFAExperiment.argos.erb  CPFAExample.xml
experiments_full/: n100_c128.results  n100_c16.results  n100_c32.results  n100_c64.results  n100_c8.results  n10_c128.results  n10_c16.results  n10_c32.results  n10_c64.results  n10_c8.results  n1_c128.results  n1_c16.results  n1_c32.results  n1_c64.results  n1_c8.results  plot.py
experiments_scale-swarm100/: n128_c16.results  n128_c32.results  n128_c64.results  n16_c16.results  n16_c32.results  n16_c64.results  n2_c16.results  n2_c32.results  n2_c64.results  n32_c16.results  n32_c32.results  n32_c64.results  n4_c16.results  n4_c32.results  n4_c64.results  n64_c16.results  n64_c32.results  n64_c64.results  n8_c16.results  n8_c32.results  n8_c64.results
source/Base/: BaseController.cpp  BaseController.h
source/CPFA/: CMakeLists.txt  CPFA_controller.cpp  CPFA_controller.h  CPFA_loop_functions.cpp  CPFA_loop_functions.h  CPFA_qt_user_functions.cpp
